--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "repository": "",
   "scripts": {
-    "start": "webpack-dev-server --config ./build/webpack.dev.conf.js --hot --open",
-    "build": "webpack --config ./build/webpack.prod.conf.js",
+    "start": "webpack-dev-server --config ./config/webpack.dev.conf.js --hot --open",
+    "build": "webpack --config ./config/webpack.prod.conf.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch"
   },
