--- a/package.json
+++ b/package.json
@@ -18,14 +18,21 @@
     "@loadable/component": "^5.12.0",
     "@types/loadable__component": "^5.10.0",
     "@types/react-dom": "^16.9.5",
+    "@types/react-redux": "^7.1.7",
     "axios": "^0.19.2",
     "cross-env": "^7.0.2",
     "imagemin-webpack-plugin": "^2.4.2",
+    "raven-js": "^3.27.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-router-redux": "^4.0.8",
     "redux": "^4.0.5",
+    "redux-actions": "^2.6.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "save-dev": "0.0.1-security"
   },
   "devDependencies": {
