--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,9 @@
     "noImplicitAny": true,
     "module": "CommonJS",
     "target": "es5",
-    "jsx": "react"
+    "jsx": "react",
+    "esModuleInterop": true
   },
   "include": ["./src/**/*"],
-  // "exclude": ["./node_modules"]
+  "exclude": ["./node_modules"]
 }
