--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/loadable__component": "^5.10.0",
     "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.7",
+    "@types/redux-actions": "^2.6.1",
     "axios": "^0.19.2",
     "cross-env": "^7.0.2",
     "imagemin-webpack-plugin": "^2.4.2",
