--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "repository": "",
   "scripts": {
-    "start": "webpack-dev-server --config ./config/webpack.dev.conf.js --hot --open",
-    "build": "webpack --config ./config/webpack.prod.conf.js",
+    "start": "cross-env NODE_ENV=development && webpack-dev-server --config ./config/webpack.dev.conf.js --hot --open",
+    "build": "cross-env NODE_ENV=production && webpack --config ./config/webpack.prod.conf.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch"
   },
@@ -59,6 +59,9 @@
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss": "^8.0.9",
+    "postcss-loader": "^4.0.2",
+    "postcss-preset-env": "^6.7.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.1.3",
     "typescript": "^3.8.3",
