--- a/package.json
+++ b/package.json
@@ -45,10 +45,12 @@
     "@types/react-router-dom": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^2.22.0",
     "@typescript-eslint/parser": "^2.22.0",
+    "autoprefixer": "^10.0.0",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.2",
+    "cssnano": "^4.1.10",
     "eslint": "^6.8.0",
     "eslint-config-alloy": "^3.6.0",
     "eslint-plugin-react": "^7.18.3",
